# kouchou-ai

./: .env.azure.example  .env.example  .gitignore  .gitmodules  Azure.md  CLA.md  CONTRIBUTING.md  Makefile  README.md  compose.yaml
.azure/: README.md
server/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
server/broadlistening/: .gitignore  GUIDT_FOR_AI.md  KNOWN_ISSUES.md  README.md  README_ja.md
server/broadlistening/pipeline/: hierarchical_main.py  hierarchical_specs.json  hierarchical_utils.py  specs.json  utils.py
server/broadlistening/pipeline/configs/: dummy-comments-japan-multi.json  dummy-comments-japan.json  example-polis.json  hierarchical-example-polis.json
server/broadlistening/pipeline/inputs/: dummy-comments-japan.csv  example-polis.csv
server/broadlistening/pipeline/outputs/example-hierarchical-polis/: metadata.json
server/broadlistening/pipeline/services/: category_classification.py  llm.py  parse_json_list.py
server/broadlistening/pipeline/steps/: aggregation.py  embedding.py  extraction.py  hierarchical_aggregation.py  hierarchical_clustering.py  hierarchical_initial_labelling.py  hierarchical_merge_labelling.py  hierarchical_overview.py  hierarchical_visualization.py
server/public/meta/default/: metadata.json
server/src/: config.py  logger.py  main.py
server/src/middleware/: security_middleware.py
server/src/reports/example/: example_config.json
server/src/routers/: __init__.py  admin_report.py  healthcheck.py  meta.py  report.py
server/src/schemas/: admin_report.py  base.py  metadata.py  report.py
server/src/services/: report_launcher.py  report_status.py
server/src/utils/: logger.py
(+162 files in other folders)
